# dMail

./: README.md
dMail-Backend/: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  coverage.sh
dMail-Backend/src/: lib.rs  main.rs
dMail-Backend/src/chat/: chat.rs  chat_message.rs  mod.rs
dMail-Backend/src/config/: config.rs  datatype.rs  error_msgs.rs  mod.rs
dMail-Backend/src/database/: chat.rs  common.rs  file.rs  mod.rs  request.rs  user.rs
dMail-Backend/src/database/memory/: database.rs  mod.rs  user.rs
dMail-Backend/src/database/postgre/: user.rs
dMail-Backend/src/database/redis/: chat.rs  common.rs  file.rs  index.rs  mod.rs  path.rs  request.rs  user.rs
dMail-Backend/src/oss/: mod.rs  s3.rs
dMail-Backend/src/server/: email.rs  mod.rs  server_state.rs
dMail-Backend/src/tests/: database_chat_test.rs  database_file_test.rs  database_request_test.rs  database_user_test.rs  mod.rs  test.rs  user_session_test.rs  user_session_test_supplement.rs
dMail-Backend/src/user/: mod.rs  user.rs  user_data.rs  user_notice.rs
dMail-Backend/src/user/http_request/: apply_for_mail.rs  mod.rs
dMail-Backend/src/user/user_request/: checks.rs  handler.rs  (+2 more)
dMail-Backend/src/utils/: aes.rs  base64.rs  mod.rs  rsa.rs
dMail-Backend/tests/: basic.rs
dMail-Backend/tests/cases/: login_01_success.data.json  login_02_user_not_found.data.json  login_03_logged.data.json  login_04_password_error.data.json  pull_01_success.data.json  register_01_success.data.json  register_02_email_registered.data.json  register_03_password_format.data.json  set_pub_key_01.data.json  set_pub_key_02.data.json  update_user_info_01_name.data.json  update_user_info_02_password.data.json  user_setting_01.data.json
dMail-Backend/tests/common/: checker.rs  coder.rs  errors.rs  mod.rs  process_set_up.rs  pull.rs  server_set_up.rs  set_connection_pub_key.rs  testcase.rs
(+7 files in other folders)
