[package]
name = "dMail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Actix
actix = "0.13.0"
actix-web = { version="4.3.1", features = ["rustls"]}
actix-web-actors = "4.2.0"
tokio = {version = "1.26.0", features = ["rt", "rt-multi-thread", "parking_lot"]}
futures = "0.3"

# Serde
serde = {version = "1.0.158", features = ["derive"]}
serde_json = "1.0.94"


# 
phf = { version = "0.11", features = ["macros"] }


chashmap = "2.2.2"

env_logger = "0.10.0"
log = "0.4.17"
dotenv = "0.15.0"
once_cell = "1.17.1"
rand = "0.8.5"

# Crypto
bytes = "1.4.0"
rsa = "0.8.2"
pkcs1 = { version = "0.7.1", features = ["pem"]}
base64 = "0.21.0"
aes-gcm = "0.10.1"
generic-array = "0.14.6"

num_cpus = "1.15.0"
lettre = { version = "0.10.3", features = ["tokio1", "tokio1-native-tls"] }
chrono = "0.4.24"
regex = "1.5.4"
smartstring = { version = "*", features = ["proptest", "serde"] }
rust-s3 = "0.33"


# Mobc
mobc = { version = "0.8", features = ["tokio"] }
mobc-redis = "0.8.0"
redis = "0.22.3"
sscanf = "0.4.0"
rustls = "0.20.2"
rustls-pemfile = "1"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
assert-json-diff = "2.0.2"
lazy_static = "1.4.0"
pretty_assertions = "1.2.1"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tungstenite = {version = "0.16.0", features = ["native-tls"]}
url = "2.2.2"
serial_test = "2.0.0"
futures = "0.3"